# MLOpsLearning

./: .gitignore  Dockerfile  LICENSE  README.md  compose.yml  pyproject.toml  setup_env.sh
.devcontainer/: devcontainer.json
.dvc/: config
.github/workflows/: action.yml
Notebooks/: classification.ipynb  regression.ipynb
Unet/: data.dvc  weights.dvc
Unet/config/: config.json
Unet/src/: dataset.py  main.py  model.py  predictor.py  trainer.py
