# Configure formatting tool black
[tool.black]
line-length = 80
skip-string-normalization = true
skip-magic-trailing-comma = true
safe = true

# Configure import sorting tool isort
[tool.isort]
profile = "black"

# Configure linting tool pylint
[tool.pylint.message_control]
disable = [
  "import-error",
  "relative-beyond-top-level",
  "missing-module-docstring",
  "missing-class-docstring",
  "missing-function-docstring",
]

# Configure package management tool poetry
[tool.poetry]
name = "mlopslearning"
version = "0.1.0"
description = "Project to learn MLOps"
authors = ["Cai Qi <iqiacs@gmail.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
