# Configure formatting tool black
[tool.black]
line-length = 80
skip-string-normalization = true
skip-magic-trailing-comma = true

# Configure import sorting tool isort
[tool.isort]
profile = "black"

# Configure linting tool pylint
[tool.pylint.message_control]
disable = [
  "import-error",
  "relative-beyond-top-level",
  "missing-module-docstring",
  "missing-class-docstring",
  "missing-function-docstring",
]

# Configure package management tool poetry
[tool.poetry]
name = "mlopslearning"
version = "0.1.0"
description = "Project to learn MLOps"
authors = ["Cai Qi <iqiacs@gmail.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10"
notebook = "^7.3.2"
matplotlib = "^3.10.1"
scikit-learn = "^1.6.1"
seaborn = "^0.13.2"
dvc = "^3.59.1"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
pytest = "^8.3.5"
isort = "^6.0.1"
pylint = "^3.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
